<resources>
    <string name="app_name">U约圈</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="inputPhoneNumber">请输入手机号码</string>
    <string name="phoneNumber_register">手机号码注册</string>
    <string name="input_password">请输入密码</string>
    <string name="getVerificationCode">获取短信验证码</string>
    <string name="inputVerificationCode">请输入验证码</string>
    <string name="resend_code">重新获取验证码</string>
    <string name="verify">验证</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="schedule">行程</string>
    <string name="group">小组</string>
    <string name="appointment_circle">约圈</string>
    <string name="build">立即创建</string>
    <string name="information">目前还没有行程，赶紧创建吧</string>
    <string name="Sunday">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>
    <string name="create_schedule">创建行程</string>
    <string name="update_schedule">修改行程</string>
    <string name="delete_schedule">删除行程</string>
</resources>
