<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/fg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_password"/>

    <EditText
        android:id="@+id/fg_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputPhoneNumber"
        android:inputType="phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/fg_verificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/inputVerificationCode"/>

        <Button
            android:id="@+id/fg_getVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getVerificationCode"/>
    </LinearLayout>


    <Button
        android:id="@+id/fg_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"/>

</LinearLayout>
