<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liu.utext.view.activity.RegisterActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:textSize="30sp"
        android:text="@string/phoneNumber_register"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView2"/>

    <EditText
        android:id="@+id/register_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/inputPhoneNumber"
        android:layout_below="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_toStartOf="@+id/registered"/>

    <Button
        android:id="@+id/getVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getVerificationCode"
        android:layout_alignBottom="@+id/register_phoneNumber"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/register_phoneNumber"
        android:layout_alignStart="@+id/register_phoneNumber"
        android:layout_toStartOf="@+id/getVerificationCode"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
